# docustra

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
data/eval/: golden_dataset.json
docker/: docker-compose.yml
docs/chunking/: 00_overview.md
docs/patterns/: 00_overview.md  01_adaptive_rag.md  02_agentic_rag.md  03_branched_rag.md  04_corrective_rag.md  05_graph_rag.md  06_hyde_rag.md  07_multimodal_rag.md  08_self_rag.md  09_hybrid_rag.md
docs/production/: 00_overview.md  01_citation_enforcement.md  02_prompt_versioning.md  03_eval_ci_gating.md
notebooks/: README.md
prompts/v1/: adaptive.yaml  agentic.yaml  branched.yaml  corrective.yaml  graph.yaml  hybrid.yaml  hyde.yaml  self_rag.yaml  shared.yaml
scripts/: eval_ci.py  ingest_sample_data.py
src/docustra/api/: main.py  schemas.py
src/docustra/api/routers/: health.py  ingest.py  query.py
src/docustra/core/: __init__.py  config.py  exceptions.py  logging.py  prompts.py
src/docustra/evaluation/: metrics.py
src/docustra/graph/: builder.py  extractor.py  queries.py
src/docustra/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
src/docustra/retrieval/: __init__.py  adaptive.py  agentic.py  base.py  branched.py  corrective.py  graph.py  hybrid.py  hyde.py  multimodal.py  reranker.py  self_rag.py
src/docustra/storage/: graph_store.py  vector_store.py
src/docustra/ui/: app.py
tests/: conftest.py
tests/unit/: test_chunker.py
tests/unit/test_retrieval/: test_adaptive.py  test_corrective.py  test_hyde.py
