[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docustra"
version = "0.1.0"
description = "Enterprise Document Intelligence Platform — showcasing all advanced RAG architectural patterns"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Aritra", email = "aritra@example.com" }]
keywords = ["rag", "llm", "retrieval-augmented-generation", "langchain", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # LLM & Orchestration
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-qdrant>=0.2.0",
    # Embeddings
    "sentence-transformers>=3.0.0",
    "langchain-huggingface>=0.1.0",
    # Vector Store
    "qdrant-client>=1.11.0",
    # Graph Store
    "neo4j>=5.20.0",
    "langchain-neo4j>=0.3.0",
    # Document Parsing (PyMuPDF handles PDF text + image extraction natively)
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    # API & Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    # Web Search (CRAG fallback)
    "tavily-python>=0.5.0",
    # Caching
    "redis>=5.0.0",
    # Observability
    "opentelemetry-sdk>=1.25.0",
    "openinference-instrumentation-langchain>=0.1.0",
    # Evaluation
    "ragas>=0.2.0",
    # Utilities
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
ui = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
    "streamlit-chat>=0.1.1",
]
notebooks = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[project.scripts]
docustra-api = "docustra.api.main:start"
docustra-ui = "docustra.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docustra"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/docustra --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/docustra"]
omit = ["*/tests/*", "*/ui/*"]
